# swiftdeploy

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST.md  manifest.yaml  nginx.Dockerfile  pyproject.toml  requirements.txt  swiftdeploy  swiftdeploy.cmd
app/: main.py  requirements.txt
policies/: canary_safety.rego  infrastructure.rego
scripts/: install-swiftdeploy.ps1  uninstall-swiftdeploy.ps1
swiftdeploy_cli/: __init__.py  audit.py  cli.py  core.py  dashboard.py  history.py  host_stats.py  metrics.py  opa.py
templates/: docker-compose.yml.j2  nginx.conf.j2
