[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftdeploy-cli"
version = "2.0.0"
description = "Declarative deployment lifecycle CLI with policy-gated deploy/promote (HNG DevOps Stage 4)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Jinja2==3.1.4",
    "PyYAML==6.0.2",
    "prometheus-client==0.20.0",
    "psutil==5.9.8",
    "rich==13.7.1",
]

[project.scripts]
swiftdeploy = "swiftdeploy_cli.core:main"

[tool.setuptools.packages.find]
include = ["swiftdeploy_cli*"]
